# nixl-doca

./: meson.build  meson_options.txt  pyproject.toml
.gitlab/: build.sh  test_python.sh
contrib/: Dockerfile
src/api/cpp/: nixl.h  nixl_types.h
src/api/cpp/backend/: backend_aux.h  backend_engine.h  backend_plugin_doca_device.cuh
src/api/python/: _api.py
src/bindings/python/: nixl_bindings.cpp
src/core/: agent_data.h  meson.build  nixl_agent.cpp  nixl_plugin_manager.cpp
src/plugins/: meson.build
src/plugins/cuda_gds/: gds_backend.cpp  gds_backend.h  gds_utils.cpp
src/plugins/doca/: doca_backend.cpp  doca_backend.h  kernel_read.cu  kernel_write.cu  meson.build
src/plugins/doca/public/: backend_plugin_doca_common.h
src/plugins/hf3fs/: hf3fs_backend.cpp  hf3fs_utils.cpp
src/plugins/ucx/: ucx_backend.cpp  ucx_backend.h
src/plugins/ucx_mo/: ucx_mo_backend.h
src/pybind/: nixl_bindings.cpp
test/nixl/: meson.build  nixl_doca_cuda_test.cu  nixl_doca_device_test.cu  test_plugin.cpp
test/python/: nixl_api_test.py
test/unit/plugins/: meson.build
test/unit/plugins/doca/: common.h  meson.build  nixl_doca_test.cpp  simple_kernel.cu
test/unit/plugins/hf3fs/: nixl_gds_test.cpp
test/unit/plugins/ucx_mo/: ucx_mo_backend_test.cpp
